# athena

./: .fortls.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENSE  Makefile  Makefile.old  Materials_project_download.ipynb  README.md  TODO  codemeta.json  example_parameterised_derived_type.f90  ford.md  fpm.toml  paper.bib  paper.md  param.in  tmp12.f90
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: feature.md  release.md
.github/workflows/: cmake.yml  coverage.yaml  coverage.yml  draft-pdf.yml  fpm.yml  fpm_examples.yml  fpm_intel.yml  metrics.yml  spack.yml
.spack/: repo.yaml
DPython_test/: main.py
cmake/: CodeCoverage.cmake
doc/: example.in
docs/: requirements.txt
docs/ford/: ford_project.yml
docs/joss/: paper.bib  paper.md
docs/source/: about.rst  api.rst  conf.py  index.rst  install.rst
example/: common.mk  param.in
example/adam_benchmark/: Makefile  compare_fortran_pytorch.py
example/benchmark_adam/: Makefile
example/custom_forward/: Makefile
example/example_library/: fpm.toml
example/fastkan_sine/: pytorch_comparison.py
example/gat_node_classification/: pyg_gat_comparison.py  pytorch_gat_comparison.py
example/gno_regression/: Makefile
example/include/: mod_inputs.f90  mod_read_mnist.f90
example/inverse_design/: Makefile
example/kan_sine/: pykan_comparison.py
example/lno_heat/: Makefile
example/lno_rollout/: Makefile
example/mnist/: Makefile  expected_output_ifort.txt  expected_output_ifx.txt  pytorch_comparison.py  test_job.in
example/mnist_3D/: Makefile  test_job.in
example/mnist_addit/: Makefile  test_job.in
example/mnist_bn/: Makefile
example/mnist_drop/: Makefile  test_job.in
example/mpnn_chemical/: Makefile
example/msgpass/: Makefile  database.xyz
example/msgpass_chemical/: Makefile  pytorch_network.py  validate_onnx.py
example/msgpass_euler/: Makefile
example/onnx/: Makefile  inspect_onnx.py  onnx_fc_reference.f90  verify_onnx.py
example/onnx_gnn/: Makefile
example/onnx_nop/: Makefile
example/ono_attention_heat/: Makefile
example/ono_heat/: Makefile
example/pinn_burgers/: Makefile  pytorch_comparison.py
example/pinn_chemical/: Makefile
example/resnet/: Makefile
example/rnn_timeseries/: Makefile  pytorch_comparison.py
example/simple/: Makefile
example/sine/: Makefile
example/wandb_network_sine/: Makefile
example/wandb_sine/: Makefile  build_fpm.sh
example/wandb_sweep/: Makefile
ext/wandb/: CMakeLists.txt  README.md  athena_wandb.f90  fpm.toml  wandb_c.c  wandb_c.h
src/: atelos.f90  athena.f90  athena_omp.f90  convolution.f90  fullyconnected.f90  inputs.f90  main.f90  main_mp.f90  normalisation.f90  pool.f90  pooling.f90  softmax.f90
src/athena/: athena_accuracy.f90  athena_activation.f90  athena_activation_gaussian.f90  athena_activation_layer.f90  athena_activation_leaky_relu.f90  athena_activation_linear.f90  athena_activation_none.f90  athena_activation_piecewise.f90  athena_activation_relu.f90  athena_activation_selu.f90  athena_activation_sigmoid.f90  athena_activation_softmax.f90  athena_activation_swish.f90  athena_activation_tanh.f90  athena_add_layer.f90  athena_avgpool1d_layer.f90  athena_base_layer.f90  athena_base_layer_sub.f90  athena_base_layer_sub_init.f90  athena_base_layer_sub_io.f90  athena_batchnorm1d_layer.f90  athena_batchnorm2d_layer.f90  athena_batchnorm3d_layer.f90  athena_clipper.f90  athena_concat_layer.f90  athena_container_layer.f90  athena_container_layer_sub.f90  athena_conv1d_layer.f90  athena_conv2d_layer.f90  athena_conv3d_layer.f90  athena_conv_autodiff_reference.f90  athena_diffstruc_extd.f90  athena_diffstruc_extd_loss.f90  athena_diffstruc_extd_nop.f90  athena_diffstruc_extd_sub.f90  athena_diffstruc_extd_sub_batchnorm.f90  athena_diffstruc_extd_sub_conv.f90  athena_diffstruc_extd_sub_duvenaud.f90  athena_diffstruc_extd_sub_gat.f90  athena_diffstruc_extd_sub_kipf.f90  (+62 more)
src/lib/: mod_accuracy.f90  mod_activation.f90  mod_activation_gaussian.f90  mod_activation_layer.f90  mod_activation_leaky_relu.f90  mod_activation_linear.f90  mod_activation_none.f90  mod_activation_piecewise.f90  mod_activation_relu.f90  mod_activation_selu.f90  mod_activation_sigmoid.f90  mod_activation_softmax.f90  mod_activation_swish.f90  mod_activation_tanh.f90  mod_add_layer.f90  mod_autodiff.f90  mod_avgpool1d_layer.f90  mod_avgpool2d_layer.f90  mod_avgpool3d_layer.f90  mod_base_layer.f90  mod_base_layer_sub.f90  mod_base_layer_sub_init.f90  mod_base_layer_sub_io.f90  (+92 more)
test/: CMakeLists.txt  Makefile  test_accuracy.f90  test_activation_layer.f90  test_activation_onnx.f90  test_activations.f90  test_add_layer.f90  test_autodiff.f90  test_autodiff_memory.f90  test_avgpool1d_layer.f90  test_avgpool2d_layer.f90  test_avgpool3d_layer.f90  test_batchnorm1d_layer.f90  test_batchnorm2d_layer.f90  test_batchnorm3d_layer.f90  test_clipper.f90  test_concat_layer.f90  test_container_layer_registry.f90  test_conv1d_layer.f90  test_conv1d_network.f90  test_conv2d_layer.f90  test_conv2d_network.f90  test_conv3d_layer.f90  test_conv3d_network.f90  test_conv_autodiff_consistency.f90  test_diffstruc_extd.f90  test_diffstruc_extd_kipf.f90  test_dropblock2d_layer.f90  test_dropblock3d_layer.f90  test_dropout_layer.f90  test_duvenaud_msgpass_layer.f90  test_dynamic_lno_layer.f90  test_fastkan_layer.f90  test_fixed_lno_layer.f90  test_flatten1d_layer.f90  test_flatten2d_layer.f90  test_flatten3d_layer.f90  test_flatten4d_layer.f90  test_flatten_layer.f90  test_full_layer.f90  (+49 more)
test/mnist/: Makefile  test_job.in
test/mnist/src/: inputs.f90  main.f90
test/src/: inputs.f90  main.f90
test/src/lib/: mod_misc.f90
tests/: expected_output.txt  test_job.in
tools/: coverage_badge.py  output_comparison.py  setup_wandb_python_env.sh  setup_wf_env.sh  sweep.py  sweep_init.py  sweep_initialise.py  sweep_momentum.py  sweep_train.py  template.in  template_momentum.in  wandb-metadata.json
(+222 files in other folders)
